# synformer

./: .gitignore  README.md  env.txt  env.yml  pyproject.toml  requirements.txt  setup.py
configs/: dev_deconly_diffusion_tfmer.yml  dev_smiles_diffusion.yml  dev_smiles_diffusion_tfmer.yml
data/: .gitignore
data/building_blocks/: README.md
data/rxn_templates/: comprehensive.txt
demo/: project.ipynb
experiments/: crossover.py  decode.py  graphga_opt.py  graphga_sf_opt.py  mutate.py
scripts/: decoder_inference.py  molopt.py  opt.py  preprocess.py  sample.py  sample_naive.py  train.py  train_v1.py  unarchive_wizard.py
synformer/: version.py
synformer/chem/: featurize.py  fpindex.py  matrix.py  mol.py  reaction.py  stack.py
synformer/data/: common.py  projection_dataset.py  projection_dataset_new.py
synformer/models/: classifier_head.py  decoder.py  diffusion.py  synformer.py  wrapper.py
synformer/models/encoder/: __init__.py  base.py  discrete.py  fixed.py  graph.py  smiles.py
synformer/models/fingerprint_head/: __init__.py  ar.py  base.py  diffusion.py  multi.py
synformer/models/projector/: __init__.py  base.py  diffusion.py  diffusion_bernoulli.py  diffusion_bernoulli_smiles.py  vanilla.py  wrapper.py
synformer/models/quantizer/: lfq.py
synformer/models/transformer/: gradient_checkpointing.py
synformer/molopt/: __main__.py  model.py  oracle.py  replay.py
synformer/molopt_old/: __main__.py
synformer/sampler/analog/: cli.py  parallel.py  state_pool.py
synformer/tools/: crypt.py  docking.py
synformer/utils/: crypt.py  image.py
