[project]
name = "synformer"
license = {file = "LICENSE"}
authors = [
    {name = "Wenhao Gao", email = "gaowh19@gmail.com"},
    {name = "Shitong Luo", email = "luost26@gmail.com"},
    {name = "Connor W. Coley", email = "ccoley@mit.edu"}
]
description = "SynFormer: Generative Model for Synthesizable Molecule Generation"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version", "dependencies"]

[tool.setuptools]
packages = ["synformer"]

[tool.setuptools.dynamic]
version = {attr = "synformer.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
# Specify patterns for files within your package that should be included
"*" = ["*.md", "*.txt", "*.csv", "data/*"]

[tool.black]
line-length = 119
target-version = ['py310']

[tool.isort]
extra_standard_library = "typing_extensions,mypy,mypy_extensions"
profile = "black"

[tool.autoflake]
remove-all-unused-imports = true
expand-star-imports = true
ignore-init-module-imports = true
